feat: darkmode; checkpoint

--- a/src/app/core/components/chart-card/chart-card.component.html
+++ b/src/app/core/components/chart-card/chart-card.component.html
@@ -17,6 +17,7 @@
       </ng-container>
       <ng-container *ngIf="actionButton && actionButton.type === 'toggle'">
         <p-toggleButton
+          class="chart-card-custom"
           [(ngModel)]="actionButton.toggle.value"
           [onIcon]="'pi ' + actionButton.toggle.onIcon"
           [offIcon]="'pi ' + actionButton.toggle.offIcon"
