--- a/src/app/modules/dashboard/analyze/featured-news/featured-news.component.html
+++ b/src/app/modules/dashboard/analyze/featured-news/featured-news.component.html
@@ -14,7 +14,7 @@
           >
             <div
               class="flex py-3 gap-4"
-              [ngClass]="{ 'border-top-1 surface-border': !options.first }"
+              [ngClass]="{ 'border-top-1 border-200': !options.first }"
             >
               <img
                 [src]="item.image_url"
