--- a/src/app/core/components/button-secondary/button-secondary.component.html
+++ b/src/app/core/components/button-secondary/button-secondary.component.html
@@ -1,1 +1,1 @@
-<p-button [label]="label" [icon]="icon" iconPos="right"></p-button>
+<p-button [label]="label" [icon]="icon" iconPos="right" severity="secondary" ></p-button>
