--- a/src/app/core/components/file-upload/file-upload.component.html
+++ b/src/app/core/components/file-upload/file-upload.component.html
@@ -1,5 +1,5 @@
 <div
-  class="drop-zone"
+  class="drop-zone border-1 border-200"
   (dragover)="onDragOver($event)"
   (dragleave)="onDragLeave($event)"
   (drop)="onDrop($event)"
