--- a/src/app/modules/dashboard/newsindex/newsindex.component.html
+++ b/src/app/modules/dashboard/newsindex/newsindex.component.html
@@ -137,7 +137,7 @@
                     [outlined]="true"
                     [text]="true"
                     size="small"
-                    styleClass="p-2 border-1 border-200"
+                    styleClass="p-2 border-1 border-200 bg-white"
                     (onClick)="openEditModal(article)"
                   >
                     <icon-pencil class="fill-text-color"></icon-pencil>
@@ -146,7 +146,7 @@
                     [outlined]="true"
                     [text]="true"
                     size="small"
-                    styleClass="p-2 border-1 border-200"
+                    styleClass="p-2 border-1 border-200 bg-white"
                     (onClick)="openPreview(article)"
                   >
                     <icon-newspaper
