--- a/src/app/modules/dashboard/preference/category-list/category-list.component.html
+++ b/src/app/modules/dashboard/preference/category-list/category-list.component.html
@@ -1,242 +1,235 @@
 <div>
-    <p-toast></p-toast>
-    <div class="flex justify-content-between align-items-center mb-5">
-      <div>
-        <p-confirmPopup></p-confirmPopup>
-        <p-button
-          severity="secondary"
-          [plain]="true"
-          iconPos="left"
-          styleClass="border-0"
-          [style]="{ backgroundColor: '#F1F4FA' }"
-          (onClick)="modalAddOpen = true"
-        >
-          <div class="flex gap-2 align-items-center">
-            <i class="pi pi-plus text-primary"></i>
-            <div class="text-color text-sm">Add Category</div>
-          </div>
-        </p-button>
-      </div>
-    </div>
+  <p-toast></p-toast>
+  <div class="flex justify-content-between align-items-center mb-5">
     <div>
-      <div class="card">
-        <p-table
-          [value]="categories"
-          dataKey="category_set"
-          [rows]="10"
-          [totalRecords]="totalRecords"
-          [showFirstLastIcon]="false"
-          [loading]="loading"
-          [tableStyle]="{ 'min-width': '50rem' }"
-        >
-          <ng-template pTemplate="header">
-            <tr class="text-sm font-medium">
-              <th class="w-6rem">
-                <div class="flex align-items-center gap-2">
-                  <span>No</span>
-                  <i
-                    pSortableColumn="category_set"
-                    class="pi pi-angle-down"
-                  ></i>
-                </div>
-              </th>
-              <th>
-                <div class="flex align-items-center gap-2">
-                  Category Name
-                  <i
-                    pSortableColumn="descriptionz"
-                    class="pi pi-angle-down"
-                  ></i>
-                </div>
-              </th>
-              <th style="width: 4rem" class="text-center">Action</th>
-            </tr>
-          </ng-template>
-          <ng-template pTemplate="body" let-category let-expanded="expanded">
-            <tr class="text-sm">
-              <td>
-                <div class="flex align-items-center gap-2">
-                  {{ category.category_set }}
-                </div>
-              </td>
-              <td>
-                <div class="flex align-items-center gap-1 w-max">
-                  <div>
-                    {{ category.descriptionz }}
-                  </div>
-                </div>
-              </td>
-              <td>
-                <div class="flex gap-2">
-                  <p-button
-                    [outlined]="true"
-                    [text]="true"
-                    size="small"
-                    styleClass="p-2 border-1 border-200"
-                    (onClick)="openEditModal(category)"
-                  >
-                    <icon-pencil class="fill-text-color"></icon-pencil>
-                  </p-button>
-                  <p-button
-                    [outlined]="true"
-                    [text]="true"
-                    size="small"
-                    styleClass="p-2 border-1 border-200"
-                    (onClick)="deleteCategory(category)"
-                  >
-                    <i class="pi pi-trash text-red-500"></i>
-                  </p-button>
-                </div>
-              </td>
-            </tr>
-          </ng-template>
-        </p-table>
-        <p-paginator
-          (onPageChange)="onPageChange($event)"
-          [first]="first"
-          [rows]="rows"
-          [totalRecords]="totalRecords"
-          [templateLeft]="customLeftTemplate"
-          [showFirstLastIcon]="false"
-        >
-          <ng-template #customLeftTemplate let-state>
-            <span class="text-sm text-color">
-              Total Category:
-              <span class="text-sm font-semibold">{{
-                state.totalRecords
-              }}</span></span
-            >
-          </ng-template>
-        </p-paginator>
-      </div>
+      <p-confirmPopup></p-confirmPopup>
+      <p-button
+        severity="secondary"
+        [plain]="true"
+        iconPos="left"
+        styleClass="border-0"
+        [style]="{ backgroundColor: '#F1F4FA' }"
+        (onClick)="modalAddOpen = true"
+      >
+        <div class="flex gap-2 align-items-center">
+          <i class="pi pi-plus text-primary"></i>
+          <div class="text-sm" style="color: #464255 !important;">Add Category</div>
+        </div>
+      </p-button>
     </div>
   </div>
-  
-  <p-dialog
-    header="Header"
-    [(visible)]="modalAddOpen"
-    [modal]="true"
-    [style]="{ width: '50rem' }"
-    [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
-  >
-    <ng-template pTemplate="header">
-      <div class="inline-flex align-items-center justify-content-center gap-2">
-        <span class="font-bold text-md">Create category</span>
-      </div>
-    </ng-template>
-    <form [formGroup]="createValues" class="flex flex-column gap-4">
-      <div class="flex flex-column gap-2">
-        <label for="category" class="font-semibold text-sm">Category Name</label>
-        <input
-          pInputText
-          formControlName="category"
-          id="category"
-          placeholder="Category Name"
-        />
-      </div>
-    </form>
-    <ng-template pTemplate="footer">
-      <p-button
-        (click)="modalAddOpen = false"
-        label="Cancel"
-        [outlined]="true"
-      ></p-button>
-      <p-button
-        (click)="createCategory()"
-        label="Submit"
-        pAutoFocus
-        [autofocus]="true"
-        [disabled]="!this.createValues.controls.category.valid"
-      ></p-button>
-    </ng-template>
-  </p-dialog>
-  
-  <p-dialog
-    header="Header"
-    [(visible)]="modalUpdateOpen"
-    [modal]="true"
-    [style]="{ width: '50rem' }"
-    [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
-  >
-    <ng-template pTemplate="header">
-      <div class="inline-flex align-items-center justify-content-center gap-2">
-        <span class="font-bold text-md">Detail Category</span>
-      </div>
-    </ng-template>
-    <form [formGroup]="editedValues" class="flex flex-column gap-4">
-      <div class="flex flex-column gap-2">
-        <label for="category" class="text-sm">Category Name</label>
-        <input pInputText formControlName="category" id="category" />
-      </div>
-    </form>
-    <div class="mt-4">
-      <p-treeSelect
-        class="w-full md:w-20rem"
-        containerStyleClass="w-full"
-        [(ngModel)]="selectedSubCategories"
-        [options]="subCategoryOptions"
-        [filter]="true"
-        [filterInputAutoFocus]="true"
-        [metaKeySelection]="false"
-        [virtualScroll]="true"
-        [virtualScrollItemSize]="46"
-        [virtualScrollOptions]="{ scrollHeight: '320px' }"
-        placeholder="Select"
-        appendTo="body"
-        selectionMode="checkbox"
-      ></p-treeSelect>
+  <div>
+    <div class="card">
+      <p-table
+        [value]="categories"
+        dataKey="category_set"
+        [rows]="10"
+        [totalRecords]="totalRecords"
+        [showFirstLastIcon]="false"
+        [loading]="loading"
+        [tableStyle]="{ 'min-width': '50rem' }"
+      >
+        <ng-template pTemplate="header">
+          <tr class="text-sm font-medium">
+            <th class="w-6rem">
+              <div class="flex align-items-center gap-2">
+                <span>No</span>
+                <i pSortableColumn="category_set" class="pi pi-angle-down"></i>
+              </div>
+            </th>
+            <th>
+              <div class="flex align-items-center gap-2">
+                Category Name
+                <i pSortableColumn="descriptionz" class="pi pi-angle-down"></i>
+              </div>
+            </th>
+            <th style="width: 4rem" class="text-center"><div>Action</div></th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-category let-expanded="expanded">
+          <tr class="text-sm">
+            <td>
+              <div class="flex align-items-center gap-2">
+                {{ category.category_set }}
+              </div>
+            </td>
+            <td>
+              <div class="flex align-items-center gap-1 w-max">
+                <div>
+                  {{ category.descriptionz }}
+                </div>
+              </div>
+            </td>
+            <td>
+              <div class="flex gap-2">
+                <p-button
+                  [outlined]="true"
+                  [text]="true"
+                  size="small"
+                  styleClass="p-2 border-1 border-200 bg-white"
+                  (onClick)="openEditModal(category)"
+                >
+                  <icon-pencil class="fill-text-color"></icon-pencil>
+                </p-button>
+                <p-button
+                  [outlined]="true"
+                  [text]="true"
+                  size="small"
+                  styleClass="p-2 border-1 border-200 bg-white"
+                  (onClick)="deleteCategory(category)"
+                >
+                  <i class="pi pi-trash text-red-500"></i>
+                </p-button>
+              </div>
+            </td>
+          </tr>
+        </ng-template>
+      </p-table>
+      <p-paginator
+        (onPageChange)="onPageChange($event)"
+        [first]="first"
+        [rows]="rows"
+        [totalRecords]="totalRecords"
+        [templateLeft]="customLeftTemplate"
+        [showFirstLastIcon]="false"
+      >
+        <ng-template #customLeftTemplate let-state>
+          <span class="text-sm text-color">
+            Total Category:
+            <span class="text-sm font-semibold">{{
+              state.totalRecords
+            }}</span></span
+          >
+        </ng-template>
+      </p-paginator>
     </div>
-    <ng-template pTemplate="footer">
-      <p-button
-        (click)="modalUpdateOpen = false"
-        label="Cancel"
-        pAutoFocus
-        [outlined]="true"
-      ></p-button>
-      <p-button
-        (click)="updateCategory()"
-        label="Save"
-        pAutoFocus
-        [autofocus]="true"
-      ></p-button>
-    </ng-template>
-  </p-dialog>
-  
-  <p-dialog
-    header="Header"
-    [(visible)]="modalDeleteOpen"
-    [modal]="true"
-    [style]="{ width: '50rem' }"
-    [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
-  >
-    <ng-template pTemplate="header">
-      <div class="inline-flex align-items-center justify-content-center gap-2">
-        <span class="font-bold text-md">Delete Category</span>
-      </div>
-    </ng-template>
-    <div class="text-center">
-      <icon-alert></icon-alert>
-      <div class="text-2xl font-semibold mb-2">Are you sure?</div>
-      <div class="text-md">
-        Do you really want to delete this data? <br />this process can't be
-        undone.
-      </div>
+  </div>
+</div>
+
+<p-dialog
+  header="Header"
+  [(visible)]="modalAddOpen"
+  [modal]="true"
+  [style]="{ width: '50rem' }"
+  [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
+>
+  <ng-template pTemplate="header">
+    <div class="inline-flex align-items-center justify-content-center gap-2">
+      <span class="font-bold text-md">Create category</span>
     </div>
-    <ng-template pTemplate="footer">
-      <p-button
-        (click)="modalDeleteOpen = false"
-        label="Cancel"
-        pAutoFocus
-        [outlined]="true"
-      ></p-button>
-      <p-button
-        (click)="confirmDeleteCategory()"
-        [loading]="isDeleting"
-        label="Delete"
-        severity="danger"
-        pAutoFocus
-        [autofocus]="true"
-      ></p-button>
-    </ng-template>
-  </p-dialog>
-  
+  </ng-template>
+  <form [formGroup]="createValues" class="flex flex-column gap-4">
+    <div class="flex flex-column gap-2">
+      <label for="category" class="font-semibold text-sm">Category Name</label>
+      <input
+        pInputText
+        formControlName="category"
+        id="category"
+        placeholder="Category Name"
+      />
+    </div>
+  </form>
+  <ng-template pTemplate="footer">
+    <p-button
+      (click)="modalAddOpen = false"
+      label="Cancel"
+      [outlined]="true"
+    ></p-button>
+    <p-button
+      (click)="createCategory()"
+      label="Submit"
+      pAutoFocus
+      [autofocus]="true"
+      [disabled]="!this.createValues.controls.category.valid"
+    ></p-button>
+  </ng-template>
+</p-dialog>
+
+<p-dialog
+  header="Header"
+  [(visible)]="modalUpdateOpen"
+  [modal]="true"
+  [style]="{ width: '50rem' }"
+  [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
+>
+  <ng-template pTemplate="header">
+    <div class="inline-flex align-items-center justify-content-center gap-2">
+      <span class="font-bold text-md">Detail Category</span>
+    </div>
+  </ng-template>
+  <form [formGroup]="editedValues" class="flex flex-column gap-4">
+    <div class="flex flex-column gap-2">
+      <label for="category" class="text-sm">Category Name</label>
+      <input pInputText formControlName="category" id="category" />
+    </div>
+  </form>
+  <div class="mt-4">
+    <p-treeSelect
+      class="w-full md:w-20rem"
+      containerStyleClass="w-full"
+      [(ngModel)]="selectedSubCategories"
+      [options]="subCategoryOptions"
+      [filter]="true"
+      [filterInputAutoFocus]="true"
+      [metaKeySelection]="false"
+      [virtualScroll]="true"
+      [virtualScrollItemSize]="46"
+      [virtualScrollOptions]="{ scrollHeight: '320px' }"
+      placeholder="Select"
+      appendTo="body"
+      selectionMode="checkbox"
+    ></p-treeSelect>
+  </div>
+  <ng-template pTemplate="footer">
+    <p-button
+      (click)="modalUpdateOpen = false"
+      label="Cancel"
+      pAutoFocus
+      [outlined]="true"
+    ></p-button>
+    <p-button
+      (click)="updateCategory()"
+      label="Save"
+      pAutoFocus
+      [autofocus]="true"
+    ></p-button>
+  </ng-template>
+</p-dialog>
+
+<p-dialog
+  header="Header"
+  [(visible)]="modalDeleteOpen"
+  [modal]="true"
+  [style]="{ width: '50rem' }"
+  [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
+>
+  <ng-template pTemplate="header">
+    <div class="inline-flex align-items-center justify-content-center gap-2">
+      <span class="font-bold text-md">Delete Category</span>
+    </div>
+  </ng-template>
+  <div class="text-center">
+    <icon-alert></icon-alert>
+    <div class="text-2xl font-semibold mb-2">Are you sure?</div>
+    <div class="text-md">
+      Do you really want to delete this data? <br />this process can't be
+      undone.
+    </div>
+  </div>
+  <ng-template pTemplate="footer">
+    <p-button
+      (click)="modalDeleteOpen = false"
+      label="Cancel"
+      pAutoFocus
+      [outlined]="true"
+    ></p-button>
+    <p-button
+      (click)="confirmDeleteCategory()"
+      [loading]="isDeleting"
+      label="Delete"
+      severity="danger"
+      pAutoFocus
+      [autofocus]="true"
+    ></p-button>
+  </ng-template>
+</p-dialog>
