--- a/src/app/modules/dashboard/preference/stopword/stopword.component.html
+++ b/src/app/modules/dashboard/preference/stopword/stopword.component.html
@@ -12,7 +12,7 @@
       >
         <div class="flex gap-2 align-items-center">
           <i class="pi pi-plus text-primary"></i>
-          <div class="text-color text-sm">Stopword</div>
+          <div class="text-sm" style="color: #464255 !important;">Stopword</div>
         </div>
       </p-button>
     </div>
@@ -42,7 +42,7 @@
                 <i pSortableColumn="stopword" class="pi pi-angle-down"></i>
               </div>
             </th>
-            <th style="width: 4rem" class="text-center">Action</th>
+            <th style="width: 4rem" class="text-center"><div>Action</div></th>
           </tr>
         </ng-template>
         <ng-template pTemplate="body" let-stopword let-expanded="expanded">
@@ -65,7 +65,7 @@
                   [outlined]="true"
                   [text]="true"
                   size="small"
-                  styleClass="p-2 border-1 border-200"
+                  styleClass="p-2 border-1 border-200 bg-white"
                   (onClick)="openEditModal(stopword)"
                 >
                   <icon-pencil class="fill-text-color"></icon-pencil>
@@ -74,7 +74,7 @@
                   [outlined]="true"
                   [text]="true"
                   size="small"
-                  styleClass="p-2 border-1 border-200"
+                  styleClass="p-2 border-1 border-200 bg-white"
                   (onClick)="deleteStopword(stopword)"
                 >
                   <i class="pi pi-trash text-red-500"></i>
