--- a/src/app/modules/dashboard/media-sov/media-name/media-name.component.html
+++ b/src/app/modules/dashboard/media-sov/media-name/media-name.component.html
@@ -5,55 +5,56 @@
     <icon-info></icon-info>
   </div>
   <spinner [spinning]="isLoading">
-    <p-scroller
-      [items]="medias"
-      [itemSize]="medias.length + 2"
-      scrollHeight="740px"
+    <div
+      style="height: 700px"
+      class="overflow-auto"
+      (scroll)="onLazyLoad($event)"
     >
-      <ng-template pTemplate="item" let-item let-options="options">
-        <div
-          class="grid grid-nogutter cursor-pointer"
-          [ngClass]="{
-            ' border-left-3 border-primary bg-gray-100':
-              item.media_id === selectedMedia?.media_id
-          }"
-          (click)="onClick(item)"
-        >
-          <div class="col-12">
-            <div class="flex align-items-center py-1 gap-3">
-              <div class="w-4rem pl-1">
-                <img
-                  [src]="item.image_url"
-                  [alt]="item.media_name"
-                  class="h-4rem w-full border-round"
-                  style="object-fit: cover"
-                  imgFallback="https://placehold.co/600x400?text=No+Image+Available"
-                />
-              </div>
-              <div
-                class="flex flex-columnjustify-content-between align-items-centerflex-1"
-              >
-                <div class="flex flex-column">
-                  <div
-                    class="text-sm font-semibold white-space-nowrap text-overflow-ellipsis overflow-hidden"
-                    style="width: 140px"
-                  >
-                    {{ item.media_name }}
-                  </div>
-                  <p
-                    class="white-space-nowrap overflow-hidden text-overflow-ellipsis p-0 mt-1"
-                    style="width: 140px"
-                  >
-                    {{ item.doc_count }}
-                    <span class="text-color-secondary">Articles</span>
-                  </p>
+      <div
+        *ngFor="let item of medias"
+        class="grid grid-nogutter cursor-pointer"
+        [ngClass]="{
+          ' border-left-3 border-primary bg-gray-100':
+            item.media_id === selectedMedia?.media_id
+        }"
+        (click)="onClick(item)"
+      >
+        <div class="col-12">
+          <div class="flex align-items-center py-1 gap-3">
+            <div class="w-4rem pl-1">
+              <img
+                [src]="item.image_url"
+                [alt]="item.media_name"
+                class="h-4rem w-full border-round"
+                style="object-fit: cover"
+                imgFallback="https://placehold.co/600x400?text=No+Image+Available"
+              />
+            </div>
+            <div
+              class="flex flex-columnjustify-content-between align-items-centerflex-1"
+            >
+              <div class="flex flex-column">
+                <div
+                  class="text-sm font-semibold white-space-nowrap text-overflow-ellipsis overflow-hidden"
+                  style="width: 140px"
+                >
+                  {{ item.media_name }}
                 </div>
+                <p
+                  class="white-space-nowrap overflow-hidden text-overflow-ellipsis p-0 mt-1"
+                  style="width: 140px"
+                >
+                  {{ item.doc_count }}
+                  <span class="text-color-secondary">Articles</span>
+                </p>
               </div>
             </div>
           </div>
         </div>
-      </ng-template>
-    </p-scroller>
+      </div>
+    </div>
+    <!-- </ng-template>
+    </p-scroller> -->
     <div>
       <p class="p-0 mt-5">
         {{ medias.length }}
