--- a/src/app/modules/dashboard/share/share.component.html
+++ b/src/app/modules/dashboard/share/share.component.html
@@ -2,11 +2,11 @@
   <p-toast></p-toast>
   <div class="flex gap-8">
     <div class="text-2xl font-semibold flex-shrink-0">Share Content</div>
-    <div class="text-sm">
+    <!-- <div class="text-sm">
       Reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
       pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
       qui officia deserunt mollit anim id est laborum.
-    </div>
+    </div> -->
   </div>
   <p-divider></p-divider>
   <form [formGroup]="formGroup" class="flex flex-column gap-4">
