--- a/src/app/modules/dashboard/article-detail/article-detail.component.html
+++ b/src/app/modules/dashboard/article-detail/article-detail.component.html
@@ -20,7 +20,7 @@
         <div class="text-sm">
           <div>
             <span class="font-semibold">Jurnalist:</span>
-            {{ article?.journalist ?? "-" }}
+            {{ article?.media_name ?? "-" }}
           </div>
           <div>
             <span class="font-semibold">Media Type:</span>
