--- a/src/app/modules/dashboard/components/media-chart/media-chart.component.html
+++ b/src/app/modules/dashboard/components/media-chart/media-chart.component.html
@@ -40,7 +40,7 @@
       <div>
         <div class="flex gap-2 mb-2">
           <div
-            style="background-color: #05b9bf; width: 10px; height: 20px"
+            style="background-color: gray; width: 10px; height: 20px"
           ></div>
           <div class="text-sm font-bold">Neutral</div>
         </div>
