--- a/src/app/modules/dashboard/spokesperson/influencers/influencers.component.html
+++ b/src/app/modules/dashboard/spokesperson/influencers/influencers.component.html
@@ -55,7 +55,7 @@
     </div>
     <div>
       <p class="p-0 mt-5">
-        {{ influencerCount.length }}
+        {{ total }}
         <span class="text-color-secondary">Spokeperson</span>
       </p>
     </div>
