--- a/src/app/modules/dashboard/media-sov/media-name/media-name.component.html
+++ b/src/app/modules/dashboard/media-sov/media-name/media-name.component.html
@@ -55,7 +55,7 @@
     </div>
     <div>
       <p class="p-0 mt-5">
-        {{ medias.length }}
+        {{ total }}
         <span class="text-color-secondary">Media</span>
       </p>
     </div>
