fix: top-issue shaking on hover

--- a/src/app/modules/dashboard/analyze/top-issue/top-issue.component.html
+++ b/src/app/modules/dashboard/analyze/top-issue/top-issue.component.html
@@ -5,7 +5,7 @@
       <div class="text-sm font-semibold">Top 10 Issue</div>
       <icon-info></icon-info>
     </div>
-    <div class="mb-5 w-full h-full">
+    <div class="mb-5 w-full h-full" style="max-width: 1108px">
       <canvas
         [ngClass]="{ hidden: !isDataExist }"
         #chartArea
