--- a/src/app/modules/dashboard/search/search.component.html
+++ b/src/app/modules/dashboard/search/search.component.html
@@ -1,10 +1,10 @@
 <section>
   <div class="flex flex-column justify-content-center align-items-center gap-2">
     <div class="text-2xl font-semibold">Search for Article</div>
-    <div>
+    <!-- <div>
       Lorem ipsum is placeholder text commonly used in the graphic, print, and
       publishing
-    </div>
+    </div> -->
   </div>
   <div
     class="flex gap-5 mt-6 w-full p-6 align-items-end border-round"
