--- a/src/app/modules/dashboard/article-detail/article-detail.component.html
+++ b/src/app/modules/dashboard/article-detail/article-detail.component.html
@@ -45,7 +45,9 @@
             {{ article?.advalue_fc ?? 0 | formatAmount }}
           </div>
           <div>
-            <a class="font-semibold" [href]="article?.file_pdf" target="_blank">Source</a>
+            <a class="font-semibold" [href]="article?.file_pdf" target="_blank"
+              >Source</a
+            >
           </div>
         </div>
       </div>
@@ -62,6 +64,12 @@
       style="object-fit: cover"
       imgFallback="https://placehold.co/600x400?text=No+Image+Available"
     />
+
+    <div class="mb-6 flex flex-column" *ngIf="article?.file_pdf && article?.media_type === 'media tv'">
+      <video style="object-fit: fill" [height]="500" controls>
+        <source [src]="article?.file_pdf" />
+      </video>
+    </div>
 
     <div
       class="text-sm text-color"
