--- a/src/styles.scss
+++ b/src/styles.scss
@@ -165,6 +165,10 @@ body.dark {
     }
   }
 
+  .p-dropdown-panel .p-dropdown-items .p-dropdown-item:not(.p-highlight):not(.p-disabled):hover {
+    background-color: var(--bg-color);
+  }
+
   .p-datepicker,
   .p-datepicker-header {
     background-color: var(--card-color);
