--- a/src/app/modules/dashboard/newsindex/newsindex.component.html
+++ b/src/app/modules/dashboard/newsindex/newsindex.component.html
@@ -82,7 +82,7 @@
                   <i pSortablxxeColumn="title" class="pi pi-angle-down"></i>
                 </div>
               </th>
-              <th style="width: 4rem" class="text-center">Preview</th>
+              <th style="width: 4rem" class="text-center"><div>Preview</div></th>
             </tr>
           </ng-template>
           <ng-template pTemplate="body" let-article let-expanded="expanded">
