--- a/src/app/modules/dashboard/preference/category-list/category-list.component.html
+++ b/src/app/modules/dashboard/preference/category-list/category-list.component.html
@@ -50,7 +50,7 @@
           <tr class="text-sm">
             <td>
               <div class="flex align-items-center gap-2">
-                {{ category.category_set }}
+                {{ category.idx }}
               </div>
             </td>
             <td>
