--- a/src/app/modules/dashboard/preference/file-export/file-export.component.html
+++ b/src/app/modules/dashboard/preference/file-export/file-export.component.html
@@ -49,7 +49,7 @@
           <tr class="text-sm">
             <td>
               <div class="flex align-items-center gap-2">
-                {{ column.id }}
+                {{ column.idx }}
               </div>
             </td>
             <td>
