--- a/src/app/modules/dashboard/preference/media-list/media-list.component.html
+++ b/src/app/modules/dashboard/preference/media-list/media-list.component.html
@@ -56,7 +56,7 @@
           <tr class="text-sm">
             <td>
               <div class="flex align-items-center gap-2">
-                {{ media.user_media_type_id }}
+                {{ media.idx }}
               </div>
             </td>
             <td>
