--- a/src/app/modules/dashboard/search/search.component.html
+++ b/src/app/modules/dashboard/search/search.component.html
@@ -102,6 +102,7 @@
             [first]="first"
             [rows]="rows"
             [totalRecords]="totalRecords"
+            [search]="true"
           ></article-list>
         </spinner>
       </div>
