--- a/src/app/modules/dashboard/article-detail/article-detail.component.html
+++ b/src/app/modules/dashboard/article-detail/article-detail.component.html
@@ -1,4 +1,5 @@
 <section>
+  <p-toast></p-toast>
   <spinner [spinning]="isLoading">
     <div class="flex flex-column gap-2">
       <div class="text-sm flex gap-3 align-items-center">
@@ -58,6 +59,10 @@
       ></tag>
     </div>
 
+    <button pButton size="small" [outlined]="true" (click)="openEditModal()">
+      Save Article
+    </button>
+
     <img
       [src]="article?.image_url ?? ''"
       class="h-30rem w-full my-6"
@@ -65,7 +70,10 @@
       imgFallback="https://placehold.co/600x400?text=No+Image+Available"
     />
 
-    <div class="mb-6 flex flex-column" *ngIf="article?.file_pdf && article?.media_type === 'media tv'">
+    <div
+      class="mb-6 flex flex-column"
+      *ngIf="article?.file_pdf && article?.media_type === 'media tv'"
+    >
       <video style="object-fit: fill" [height]="500" controls>
         <source [src]="article?.file_pdf" />
       </video>
@@ -77,3 +85,85 @@
     ></div>
   </spinner>
 </section>
+
+<p-dialog
+  header="Header"
+  [(visible)]="modalUpdateOpen"
+  [modal]="true"
+  [style]="{ width: '50rem' }"
+  [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
+>
+  <ng-template pTemplate="header">
+    <div class="inline-flex align-items-center justify-content-center gap-2">
+      <span class="font-bold text-md">Save article</span>
+    </div>
+  </ng-template>
+  <div class="flex flex-column gap-2">
+    <label for="category" class="text-sm">Sentiment</label>
+    <div class="flex flex-wrap gap-3">
+      <div class="flex align-items-center">
+        <p-radioButton
+          name="positive"
+          [value]="1"
+          [(ngModel)]="ingredient"
+          inputId="ingredient1"
+        />
+        <label for="ingredient1" class="ml-2"> Positive</label>
+      </div>
+
+      <div class="flex align-items-center">
+        <p-radioButton
+          name="Neutral"
+          [value]="0"
+          [(ngModel)]="ingredient"
+          inputId="ingredient2"
+        />
+        <label for="ingredient2" class="ml-2"> Neutral </label>
+      </div>
+
+      <div class="flex align-items-center">
+        <p-radioButton
+          name="Negative"
+          [value]="-1"
+          [(ngModel)]="ingredient"
+          inputId="ingredient3"
+        />
+        <label for="ingredient3" class="ml-2"> Negative </label>
+      </div>
+
+    </div>
+  </div>
+  <div class="mt-4">
+    <label class="text-sm">SubCategories</label>
+    <p-treeSelect
+      class="w-full md:w-20rem"
+      containerStyleClass="w-full border-200"
+      [(ngModel)]="selectedSubCategories"
+      [options]="subCategoryOptions"
+      [filter]="true"
+      [filterInputAutoFocus]="true"
+      [metaKeySelection]="false"
+      [virtualScroll]="true"
+      [virtualScrollItemSize]="46"
+      [virtualScrollOptions]="{ scrollHeight: '320px' }"
+      [containerStyle]="{ backgroundColor: 'var(--bg-color)' }"
+      placeholder="Select"
+      appendTo="body"
+      selectionMode="checkbox"
+    ></p-treeSelect>
+  </div>
+  <ng-template pTemplate="footer">
+    <p-button
+      (click)="modalUpdateOpen = false"
+      label="Cancel"
+      pAutoFocus
+      [outlined]="true"
+    ></p-button>
+    <p-button
+      (click)="updateCategory()"
+      label="Save"
+      pAutoFocus
+      [autofocus]="true"
+    ></p-button>
+  </ng-template>
+</p-dialog>
