--- a/src/app/modules/dashboard/map/map.component.html
+++ b/src/app/modules/dashboard/map/map.component.html
@@ -13,7 +13,7 @@
         [options]="filterOptions"
         [(ngModel)]="selectedFilter"
         (ngModelChange)="onFilterTypeChange($event)"
-        [style]="{backgroundColor: 'var(--bg-color)'}"
+        [style]="{ backgroundColor: 'var(--bg-color)' }"
         styleClass="border-200"
         dataKey="value"
         optionLabel="name"
@@ -27,7 +27,7 @@
     <div class="w-full h-30rem overflow-hidden">
       <div
         class="h-full"
-        style="background-color: var(--bg-color);"
+        style="background-color: var(--bg-color)"
         leaflet
         (leafletMapReady)="onMapReady($event)"
         [leafletOptions]="options"
@@ -46,9 +46,9 @@
 
         <div class="grid py-4 row-gap-3">
           <div
-            (click)="navigateInsideZone()"
             class="col-3 flex gap-2 text-sm cursor-pointer"
             *ngFor="let article of articles"
+            (click)="navigateInsideZone(article.article_id)"
           >
             <div>
               <icon-newspaper
