--- a/src/app/modules/dashboard/media-sov/latest-news/latest-news.component.html
+++ b/src/app/modules/dashboard/media-sov/latest-news/latest-news.component.html
@@ -49,7 +49,7 @@
                     <span
                       class="text-500 p-0 mt-0 white-space-nowrap overflow-hidden text-overflow-ellipsis"
                       style="width: 40px; font-size: 10px"
-                      >{{ article.journalist }}</span
+                      >{{ article.media_name }}</span
                     >
                   </div>
                   <div class="flex align-items-center gap-2">
