--- a/src/app/modules/dashboard/overview/top-article/top-article.component.html
+++ b/src/app/modules/dashboard/overview/top-article/top-article.component.html
@@ -66,7 +66,7 @@
                   <div class="flex align-items-center gap-2">
                     <i class="pi pi-clock text-500 text-xs"></i>
                     <span class="text-xs text-500 p-0 mt-0">{{
-                      item.datee.split(" ")[0]
+                      item.date_time.split(" ")[0]
                     }}</span>
                   </div>
                 </div>
