--- a/src/app/modules/dashboard/newsindex/newsindex.component.html
+++ b/src/app/modules/dashboard/newsindex/newsindex.component.html
@@ -350,6 +350,7 @@
       (click)="updateArticle()"
       label="Save"
       pAutoFocus
+      [disabled]="!user?.stat_edit"
       [loading]="isUpdating"
       [autofocus]="true"
     ></p-button>
