--- a/src/app/modules/dashboard/search/search.component.html
+++ b/src/app/modules/dashboard/search/search.component.html
@@ -10,6 +10,20 @@
     class="flex gap-5 mt-6 w-full p-6 align-items-end border-round"
     style="background-color: var(--card-secondary-color)"
   >
+    <!-- <div class="flex flex-column gap-2 w-4">
+      <label for="media" class="text-lg font-semibold">Periodic</label>
+      <p-dropdown
+        [(ngModel)]="selectedMedia"
+        [options]="mediaOptions"
+        optionLabel="name"
+        optionValue="value"
+        placeholder="All Media"
+        [style]="{ backgroundColor: 'var(--bg-color)' }"
+        styleClass="w-full border-200"
+        inputId="media"
+        [disabled]="isLoadingMediaOptions"
+      ></p-dropdown>
+    </div> -->
     <div class="flex flex-column gap-2 w-4">
       <label for="media" class="text-lg font-semibold">Select Media</label>
       <p-dropdown
